WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144017
Long pause under _takeViewSnapshot when screen updates are disabled
https://bugs.webkit.org/show_bug.cgi?id=144017
Summary
Long pause under _takeViewSnapshot when screen updates are disabled
Tim Horton
Reported
2015-04-21 15:25:18 PDT
Long pause under _takeViewSnapshot when screen updates are disabled
Attachments
Patch
(4.74 KB, patch)
2015-04-21 15:26 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-04-21 15:26:13 PDT
Created
attachment 251268
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-21 15:29:16 PDT
Attachment 251268
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:122: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:123: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] ERROR: Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:177: The parameter name "cid" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:177: The parameter name "windowCount" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:177: The parameter name "options" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 5 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2015-04-21 16:26:23 PDT
http://trac.webkit.org/changeset/183083
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug