Long pause under _takeViewSnapshot when screen updates are disabled https://bugs.webkit.org/show_bug.cgi?id=144017 <rdar://problem/20548397>

Reviewed by Simon Fraser.

* UIProcess/API/mac/WKView.mm:
(-[WKView _takeViewSnapshot]):
Use CGSHWCaptureWindowList, for snapshotting that doesn't block on
the next commit, and can succeed while screen updates are disabled
without blocking.

* platform/spi/cg/CoreGraphicsSPI.h:
Add some SPI.


Canonical link: https://commits.webkit.org/161985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183083 268f45cc-cd09-0410-ab3c-d52691b4dbfc